# psrx

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.claude/commands/: finish.md
.github/workflows/: coverage.yml
docs/: debugging-guide.md
docs/02-implementation/: coding-standards.md
docs/05-development/: roadmap.md
src/: lib.rs
src/core/cdrom/: cd_audio.rs  commands.rs  disc.rs  mod.rs
src/core/controller/: mod.rs
src/core/cpu/: cop0.rs  decode.rs  disassembler.rs  icache.rs  mod.rs  tracer.rs
src/core/cpu/instructions/: arithmetic.rs  branch.rs  cop0.rs  exception.rs  jump.rs  logical.rs  multiply.rs  shift.rs
src/core/dma/: mod.rs
src/core/gpu/: mod.rs  primitives.rs  registers.rs
src/core/gpu/gp0/: drawing_mode.rs  line.rs  polygon.rs  rectangle.rs  transfer.rs
src/core/gpu/gp1/: control.rs  display.rs
src/core/gpu/render/: gradient.rs  line.rs  quad.rs  rasterizer.rs  texture.rs  triangle.rs
src/core/gte/: mod.rs
src/core/interrupt/: mod.rs
src/core/memory/: cache.rs  io_device.rs  io_ports.rs  mod.rs  region.rs
src/core/spu/: adpcm.rs  adsr.rs  mod.rs  noise.rs  registers.rs  reverb.rs  voice.rs
src/core/system/: controller_ports.rs  mod.rs
src/core/timer/: mod.rs
src/frontend/: app.rs  frame_timer.rs  input.rs  mod.rs
src/frontend/renderer/: context.rs  display_renderer.rs  mod.rs  vram_texture.rs
src/frontend/renderer/shaders/: display.wgsl
src/frontend/renderer/tests/: mod.rs  vram_texture.rs
src/frontend/tests/: frame_timer.rs  input.rs  mod.rs
src/frontend/ui/: mod.rs
src/frontend/ui/panels/: mod.rs  (+5 more)
