[workspace]
members = ["xtask"]
resolver = "2"

[package]
name = "psrx"
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
authors = ["itsakeyfut"]
description = "A PlayStation (PSX) emulator written in Rust"
license = "Apache-2.0"
repository = "https://github.com/itsakeyfut/psrx"

[features]
default = ["audio"]
audio = ["dep:cpal"]

[dependencies]
# Error handling
thiserror = "2.0.17"

# Logging
log = "0.4.28"
env_logger = "0.11.8"

# Environment configuration
dotenvy = "0.15.7"

# Command line argument parsing
clap = { version = "4.5.51", features = ["derive"] }

# Serialization (for save states, config)
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }

# Bitwise operations
bitflags = "2.10"

# Audio output (optional, not available in all environments)
cpal = { version = "0.16", optional = true }

# Frontend - Window and rendering
winit = "0.30.12"
wgpu = "27.0.1"
bytemuck = { version = "1.24", features = ["derive"] }
egui = "0.33.2"
egui-wgpu = "0.33.2"
egui-winit = "0.33.2"
pollster = "0.4"

[dev-dependencies]
# Testing
criterion = "0.7"
proptest = "1.9"
tempfile = "3.23"

[[bench]]
name = "cpu_bench"
harness = false

[profile.dev]
opt-level = 1  # Some optimization for better dev experience

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
